--- a/index.html
+++ b/index.html
@@ -1083,7 +1083,7 @@ ${pad(beforeLine2,22)}${afterLine2}`;
     $('#clear').onclick = ()=>{
       $('#tmk').value = '';
       $('#array').value = '';
-      outEl.textContent = 'Enter TMK + Array, then press “Build Coding Tree”.';
+      outEl.textContent = '';
       statsEl.textContent = '—';
     };
 
